move display mode and hdr to graphics tab (#2485)
* move display mode and hdr to graphics tab

* add left margin to display settings box

* merge display combo box and fullscreen checkbox

* remove commented out checkbox

* Rename borderless to windowed

* rename graphics box and mode

* Rename window modes and map

* fix formatting

* fix: xml formatting

* Rename borderless windowed

* change resolution input layout

* rename resolution to window size

* change window size layout oriention

* add true fullscreen mode

* fix duplicate label name

* set fullscreen on true fullscreen or borderless

* remove commented out ref

* rearrange settings config for new schema

* move HDR config to GPU section

--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -136,49 +136,6 @@
                   <number>10</number>
                  </property>
                  <item>
-                  <widget class="QCheckBox" name="fullscreenCheckBox">
-                   <property name="text">
-                    <string>Enable Fullscreen</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QGroupBox" name="fullscreenModeGroupBox">
-                   <property name="title">
-                    <string>Fullscreen Mode</string>
-                   </property>
-                   <layout class="QVBoxLayout" name="fullscreenModeLayout">
-                    <item>
-                     <widget class="QComboBox" name="fullscreenModeComboBox">
-                      <property name="sizePolicy">
-                       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-                        <horstretch>0</horstretch>
-                        <verstretch>0</verstretch>
-                       </sizepolicy>
-                      </property>
-                      <item>
-                       <property name="text">
-                        <string>Borderless</string>
-                       </property>
-                      </item>
-                      <item>
-                       <property name="text">
-                        <string>True</string>
-                       </property>
-                      </item>
-                     </widget>
-                    </item>
-                   </layout>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QCheckBox" name="enableHDRCheckBox">
-                   <property name="text">
-                    <string>Enable HDR</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
                   <widget class="QCheckBox" name="separateUpdatesCheckBox">
                    <property name="text">
                     <string>Enable Separate Update Folder</string>
@@ -1007,117 +964,168 @@
           <item>
            <layout class="QVBoxLayout" name="graphicsTabLayoutMiddle">
             <item>
-             <layout class="QVBoxLayout" name="layoutResolution">
-              <property name="spacing">
-               <number>6</number>
+             <widget class="QGroupBox" name="displayOptionsGroupBox">
+              <property name="title">
+               <string>Video</string>
               </property>
-              <property name="leftMargin">
-               <number>0</number>
-              </property>
-              <item>
-               <layout class="QHBoxLayout" name="resolutionLayout">
-                <item>
-                 <widget class="QGroupBox" name="widthGroupBox">
-                  <property name="title">
-                   <string>Width</string>
-                  </property>
-                  <layout class="QVBoxLayout" name="widthLayout">
-                   <item>
-                    <widget class="QSpinBox" name="widthSpinBox">
-                     <property name="accelerated">
-                      <bool>true</bool>
+              <layout class="QVBoxLayout" name="layoutResolution">
+               <property name="spacing">
+                <number>6</number>
+               </property>
+               <property name="leftMargin">
+                <number>12</number>
+               </property>
+               <item>
+                <widget class="QGroupBox" name="displayModeGroupBox">
+                 <property name="title">
+                  <string>Display Mode</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="displayModeLayout">
+                  <item>
+                   <widget class="QComboBox" name="displayModeComboBox">
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
+                    <item>
+                     <property name="text">
+                      <string>Windowed</string>
                      </property>
-                     <property name="correctionMode">
-                      <enum>QAbstractSpinBox::CorrectionMode::CorrectToNearestValue</enum>
+                    </item>
+                    <item>
+                     <property name="text">
+                      <string>Fullscreen</string>
                      </property>
-                     <property name="keyboardTracking">
-                      <bool>false</bool>
+                    </item>
+                    <item>
+                     <property name="text">
+                      <string>Fullscreen (Borderless)</string>
                      </property>
-                     <property name="minimum">
-                      <number>0</number>
-                     </property>
-                     <property name="maximum">
-                      <number>9999</number>
-                     </property>
-                     <property name="value">
-                      <number>1280</number>
-                     </property>
-                    </widget>
-                   </item>
-                  </layout>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QGroupBox" name="heightGroupBox">
-                  <property name="title">
-                   <string>Height</string>
-                  </property>
-                  <layout class="QVBoxLayout" name="heightLayout">
-                   <item>
-                    <widget class="QSpinBox" name="heightSpinBox">
-                     <property name="frame">
-                      <bool>true</bool>
-                     </property>
-                     <property name="accelerated">
-                      <bool>true</bool>
-                     </property>
-                     <property name="correctionMode">
-                      <enum>QAbstractSpinBox::CorrectionMode::CorrectToNearestValue</enum>
-                     </property>
-                     <property name="keyboardTracking">
-                      <bool>false</bool>
-                     </property>
-                     <property name="minimum">
-                      <number>0</number>
-                     </property>
-                     <property name="maximum">
-                      <number>9999</number>
-                     </property>
-                     <property name="value">
-                      <number>720</number>
-                     </property>
-                    </widget>
-                   </item>
-                  </layout>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QGroupBox" name="heightDivider">
-                  <property name="title">
-                   <string>Vblank Divider</string>
-                  </property>
-                  <layout class="QVBoxLayout" name="vblankLayout">
-                   <item>
-                    <widget class="QSpinBox" name="vblankSpinBox">
-                     <property name="frame">
-                      <bool>true</bool>
-                     </property>
-                     <property name="accelerated">
-                      <bool>true</bool>
-                     </property>
-                     <property name="correctionMode">
-                      <enum>QAbstractSpinBox::CorrectionMode::CorrectToNearestValue</enum>
-                     </property>
-                     <property name="keyboardTracking">
-                      <bool>false</bool>
-                     </property>
-                     <property name="minimum">
-                      <number>1</number>
-                     </property>
-                     <property name="maximum">
-                      <number>9999</number>
-                     </property>
-                     <property name="value">
-                      <number>1</number>
-                     </property>
-                    </widget>
-                   </item>
-                  </layout>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-             </layout>
+                    </item>
+                   </widget>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <layout class="QHBoxLayout" name="windowSizeLayout">
+                 <item>
+                  <widget class="QGroupBox" name="windowSizeGroupBox">
+                   <property name="title">
+                    <string>Window Size</string>
+                   </property>
+                   <layout class="QHBoxLayout" name="resLayout">
+                    <item>
+                     <widget class="QLabel" name="widthLabel">
+                      <property name="text">
+                       <string>W:</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QSpinBox" name="widthSpinBox">
+                      <property name="accelerated">
+                       <bool>true</bool>
+                      </property>
+                      <property name="correctionMode">
+                       <enum>QAbstractSpinBox::CorrectionMode::CorrectToNearestValue</enum>
+                      </property>
+                      <property name="keyboardTracking">
+                       <bool>false</bool>
+                      </property>
+                      <property name="minimum">
+                       <number>0</number>
+                      </property>
+                      <property name="maximum">
+                       <number>9999</number>
+                      </property>
+                      <property name="value">
+                       <number>1280</number>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QLabel" name="heightLabel">
+                      <property name="text">
+                       <string>H:</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QSpinBox" name="heightSpinBox">
+                      <property name="frame">
+                       <bool>true</bool>
+                      </property>
+                      <property name="accelerated">
+                       <bool>true</bool>
+                      </property>
+                      <property name="correctionMode">
+                       <enum>QAbstractSpinBox::CorrectionMode::CorrectToNearestValue</enum>
+                      </property>
+                      <property name="keyboardTracking">
+                       <bool>false</bool>
+                      </property>
+                      <property name="minimum">
+                       <number>0</number>
+                      </property>
+                      <property name="maximum">
+                       <number>9999</number>
+                      </property>
+                      <property name="value">
+                       <number>720</number>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QGroupBox" name="heightDivider">
+                   <property name="title">
+                    <string>Vblank Divider</string>
+                   </property>
+                   <layout class="QVBoxLayout" name="vblankLayout">
+                    <item>
+                     <widget class="QSpinBox" name="vblankSpinBox">
+                      <property name="frame">
+                       <bool>true</bool>
+                      </property>
+                      <property name="accelerated">
+                       <bool>true</bool>
+                      </property>
+                      <property name="correctionMode">
+                       <enum>QAbstractSpinBox::CorrectionMode::CorrectToNearestValue</enum>
+                      </property>
+                      <property name="keyboardTracking">
+                       <bool>false</bool>
+                      </property>
+                      <property name="minimum">
+                       <number>1</number>
+                      </property>
+                      <property name="maximum">
+                       <number>9999</number>
+                      </property>
+                      <property name="value">
+                       <number>1</number>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </widget>
+                 </item>
+                </layout>
+               </item>
+               <item>
+                <widget class="QCheckBox" name="enableHDRCheckBox">
+                 <property name="text">
+                  <string>Enable HDR</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </widget>
             </item>
             <item>
              <spacer name="verticalSpacer">
