--- a/src/shadps4.qrc
+++ b/src/shadps4.qrc
@@ -32,5 +32,6 @@
 		<file>images/website.png</file>
 		<file>images/ps4_controller.png</file>
 		<file>images/keyboard_icon.png</file>
+                <file>images/KBM.png</file>
 	</qresource>
 </RCC>
