--- a/src/shadps4.qrc
+++ b/src/shadps4.qrc
@@ -8,6 +8,7 @@
 		<file>images/stop_icon.png</file>
 		<file>images/utils_icon.png</file>
 		<file>images/file_icon.png</file>
+		<file>images/trophy_icon.png</file>
 		<file>images/folder_icon.png</file>
 		<file>images/themes_icon.png</file>
 		<file>images/iconsize_icon.png</file>
